@@ -9,7 +9,7 @@ Socialtext::WikiFixture - Base class for tests specified on a wiki page
 
 =cut
 
-our $VERSION = '0.05';
+our $VERSION = '0.06';
 
 =head1 SYNOPSIS
 
@@ -60,9 +60,9 @@ be an array ref of array refs.
 
 sub run_test_table {
     my $self = shift;
-    my $table = shift;
+    $self->{table} = shift;
 
-    for my $row (@$table) {
+    while (my $row = $self->_next_row) {
         $row->[0] =~ s/^\s*//;
         next unless $row->[0];
         next if $row->[0] =~ /^\*?command\*?$/i; # header
@@ -70,6 +70,11 @@ sub run_test_table {
     }
 
     $self->end_hook;
+}
+
+sub _next_row {
+    my $self = shift;
+    return shift @{ $self->{table} };
 }
 
 =head2 end_hook()
@@ -88,6 +93,24 @@ Run the command.  Subclasses will implement this.
 =cut
 
 sub handle_command { die 'Subclass must implement' }
+
+=head2 include( $page_name )
+
+Include the wiki test table from $page_name into the current table.
+
+It's kind of like a subroutine call.
+
+=cut
+
+sub include {
+    my $self      = shift;
+    my $page_name = shift;
+
+    print "# Including wikitest commands from $page_name\n";
+    my $tp = $self->{testplan}->new_testplan($page_name);
+
+    unshift @{ $self->{table} }, @{ $tp->{table} };
+}
 
 =head1 AUTHOR
 
