@@ -24,6 +24,25 @@ EOT
     );
 
     eval { $plan->run_tests };
-    ok $@;
+    like $@, qr/Subclass must implement/;
 }
 
+Page_including: {
+    $rester->put_page('Foo', "| comment | included |\n");
+    $rester->put_page('Foo', "| comment | included |\n");
+    $rester->put_page('Foo', "| comment | included |\n");
+    $rester->put_page('Test Plan', <<EOT);
+* Fixture: Null
+| include | Foo |
+| include | Foo |
+| include | Foo |
+EOT
+    my $plan = Socialtext::WikiObject::TestPlan->new(
+        rester => $rester,
+        page => 'Test Plan',
+    );
+
+    $plan->run_tests;
+    is $plan->{fixture}{calls}{include}, 3;
+    is $plan->{fixture}{calls}{comment}, 3;
+}
